--- a/style.css
+++ b/style.css
@@ -17,13 +17,19 @@ body {
   font-family: "Sono", sans-serif;
   line-height: 1;
   font-weight: 400;
-  color: #555;
+  color: #fafaf9;
+  background-color: #292524;
   overflow-x: hidden;
+}
+
+.fact-form {
+  background-color: #44403c;
 }
 
 h1 {
   font-family: "Coiny", sans-serif;
   font-size: 4.2rem;
+  color: #932b8a;
   text-transform: uppercase;
   text-align: center;
 }
@@ -31,6 +37,7 @@ h1 {
 .fact {
   font-size: 2rem;
   line-height: 1.4;
+  background-color: #44403c;
 }
 
 .tag {
