--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 /* MAIN LAYOUT */
 
 .container {
-  max-width: 150rem;
+  max-width: 1500px;
   margin: auto;
 }
 
@@ -40,6 +40,11 @@ body {
 .fact-form {
   background-color: #44403c;
   margin-bottom: 4rem;
+  padding: 1.6rem 3.2rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  border-radius: 1.6rem;
 }
 
 h1 {
@@ -81,6 +86,14 @@ h1 {
   align-items: center;
   gap: 2.4rem;
   border-radius: 1.6rem;
+}
+
+@media (max-width: 1200px) {
+  .fact {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1.2rem;
+  }
 }
 
 .tag {
@@ -171,4 +184,30 @@ ul {
 .btn-cat {
   width: 100%;
   background-image: none;
+}
+
+.fact-form input,
+.fact-form select {
+  width: 22rem;
+  background-color: #78716c;
+  border: none;
+  border-radius: 10rem;
+  padding: 1.6rem;
+  font-size: 1.8rem;
+  color: inherit;
+  font-family: inherit;
+}
+
+.fact-form input::placeholder {
+  color: #a8a29e;
+}
+
+.fact-form input:first-child {
+  flex-grow: 1;
+}
+
+.fact-form span {
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin-right: 1.8rem;
 }
