--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
   padding: 4.8rem 6.4rem;
 }
 
+.hidden {
+  display: none !important;
+}
+
 /* MAIN LAYOUT */
 
 .container {
@@ -37,16 +41,6 @@ body {
   justify-content: space-between;
 }
 
-.fact-form {
-  background-color: #44403c;
-  margin-bottom: 4rem;
-  padding: 1.6rem 3.2rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-  border-radius: 1.6rem;
-}
-
 h1 {
   font-family: "Coiny", sans-serif;
   font-size: 4.2rem;
@@ -59,6 +53,12 @@ h1 {
   display: grid;
   grid-template-columns: 25rem 1fr;
   gap: 4.8rem;
+}
+
+@media (max-width: 900px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* ELEMENTS */
@@ -186,6 +186,18 @@ ul {
   background-image: none;
 }
 
+/* FORM */
+
+.fact-form {
+  background-color: #44403c;
+  margin-bottom: 4rem;
+  padding: 1.6rem 3.2rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  border-radius: 1.6rem;
+}
+
 .fact-form input,
 .fact-form select {
   width: 22rem;
@@ -210,4 +222,20 @@ ul {
   font-weight: 600;
   font-size: 1.8rem;
   margin-right: 1.8rem;
+}
+
+@media (max-width: 1000px) {
+  body {
+    padding: 3.2rem 4.8rem;
+  }
+
+  .fact-form {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .fact-form input,
+  .fact-form select {
+    width: auto;
+  }
 }
