--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,14 @@ body {
   display: none !important;
 }
 
+.message {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 3.2rem;
+  font-weight: 600;
+  margin-top: 2.4rem;
+}
+
 /* MAIN LAYOUT */
 
 #root {
